<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/friend_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.app.FriendsInfoFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-35dp">

    <ImageView
        android:id="@+id/friend_info_avatar"
        android:layout_width="197dp"
        android:layout_height="199dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="93dp"
        android:src="@drawable/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friend_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="Firstname Lastname"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_avatar" />

    <TextView
        android:id="@+id/friend_info_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="City, Country"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_gender" />

    <TextView
        android:id="@+id/friend_info_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="Role, Skill"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_age" />

    <TextView
        android:id="@+id/friend_info_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_job"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_location" />

    <TextView
        android:id="@+id/friend_info_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Female"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_name" />

    <TextView
        android:id="@+id/friend_info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="email"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_job" />

    <Button
        android:id="@+id/friend_info_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="Remove Friend"
        app:layout_constraintBottom_toTopOf="@+id/friend_info_backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_info_email" />

    <Button
        android:id="@+id/friend_info_backbutton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corner"
        android:text="Back to friends list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>