<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_friends_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.app.FriendsListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friends_recycler"
        android:layout_width="412dp"
        android:layout_height="624dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toTopOf="@+id/friends_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <include
        android:id="@+id/noFriendsView"
        layout="@layout/no_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_friends_list"
        tools:visibility="gone" />

    <Button
        android:id="@+id/friends_back_button"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_recycler" />

    <Button
        android:id="@+id/friends_list_refresh"
        android:layout_width="164dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:text="Refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friends_recycler" />

    <TextView
        android:id="@+id/friends_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="4dp"
        android:text="Your friends:"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/friends_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>